--- a/doc/fidogate.texi
+++ b/doc/fidogate.texi
@@ -2,7 +2,7 @@
 @c
 @c FIDOGATE documentation
 @c
-@c $Id: fidogate.texi,v 4.7 1996/10/16 19:35:14 mj Exp $
+@c $Id: fidogate.texi,v 4.8 1996/10/18 16:57:51 mj Exp $
 @c
 
 @setfilename fidogate.info
@@ -168,14 +168,14 @@ Basic Configuration
 FIDOGATE is a Fido-Internet gateway and a Fido tosser.  It is placed
 under the GNU General Public License, see COPYING for details.
 
-The gateway converts between the worlds of Fido NetMail/EchoMail
-(or FTNs, Fido Technology Networks in general) and the UNIX mail/news
-system. FIDOGATE will convert Fido mail packets to RFC822-style messages
-and vice versa.
+The gateway converts between the worlds of Fido NetMail/EchoMail (or
+FTNs, Fido Technology Networks in general) and the UNIX mail/news
+system. FIDOGATE will convert Fido mail packets to RFC822/1036-style
+messages and vice versa.
 
 FIDOGATE also includes a complete FIDO mail processor (NetMail/EchoMail
-scanner and tosser), a file processor (TIC file areas) and an
-Areafix/Filefix.
+scanner and tosser), an FTN-FTN gateway (NetMail only), a file processor
+(TIC file areas) and an Areafix/Filefix.
 
 
 @section How to Get FIDOGATE
@@ -216,16 +216,19 @@ mailer, I recommend using ifcico from Eugene Crosser's ifmail package.
 Installed news system. (CNews, INN)
 
 @item
-A news reader. (nn, tin, Emacs GNUS, netscape)
+A news reader. (nn, tin, Emacs GNUS, netscape, slrn, trn, knews, xrn, ...)
 
 @item
 A mail transport agent. (sendmail, smail)
 
 @item
-A mail user agent. (mail, elm, pine, Emacs VM, netscape)
+A mail user agent. (mail, elm, pine, Emacs VM, netscape, xfmail, ...)
 
 @item
 Perl. (version 4.036 or 5.000+)
+
+@item
+M4 for compiling the sendmail config files.
 
 @end itemize
 
@@ -343,7 +346,7 @@ gateway.
 @end itemize
 
 See also @code{doc/Fido-Point-HOWTO} (German) and
-@code{doc/Fido-Point-eng-HOWT} (English) for a complete description how
+@code{doc/Fido-Point-eng-HOWTO} (English) for a complete description how
 to install a point system. Furthermore, there is a section on point
 configuration at the end of this document.
 
@@ -828,16 +831,7 @@ of @code{Makefile} must be changed as well.
 @cindex Installation
 
 @noindent
-After editing @code{config.h} and @code{config.make}, have a look at
-@code{src/ftninpost.pl}. Most likely the variables @code{$RELAY} (name
-of the FIDO side of the gateway), @code{$SENDMAIL} (MTA command for
-mail), and @code{$RNEWS} (command for news) will need some editing.
-
-You may also want to uncomment the line running the @code{ftninrecomb}
-command in @code{src/ftninpost.pl} to enabled the recombining of split
-FIDO messages to a single mail/posting.
-
-Then compile the beast by entering
+Compile the beast by entering
 @example
 make depend
 make
@@ -1549,6 +1543,9 @@ No output of newline after the parameter value.
 @item -n --no-output
 No output, exit code only.
 
+@item -t --test-only
+Output @code{1} if the parameter is present, @code{0} if not.
+
 @end table
 
 @noindent Special parameters:
@@ -1658,9 +1655,8 @@ in SPOOLDIR/in/mail and SPOOLDIR/in/news to @code{sendmail} and
 ftninrecomb  @r{[}@i{-options}@r{]}
 @end example
 
-This script can be run by @code{ftninpost} to recombine split
-messages. The default is that it is not run, you must edit
-@code{src/ftninpost.pl} to enable it.
+If @code{FTNInRecombine} is enabled in @code{config.gate}, this script
+wil be run by @code{ftninpost} to recombine split messages.
 
 
 
@@ -2329,7 +2325,7 @@ FIDOGATE uses different config files:
 Common settings.
 @item config.gate
 The config file for the gateway related programs @code{ftn2rfc},
-@code{ftnin}, @code{rfc2ftn}.
+@code{ftnin}, @code{ftninpost}, @code{ftninrecomb}, @code{rfc2ftn}.
 @item config.main
 The config file for the tosser related programs @code{ftn2ftn},
 @code{ftnaf}, @code{ftnbounce}, @code{ftnbsy}, @code{ftnconfig},
@@ -2605,6 +2601,23 @@ mails from gateway users to @i{user@@do.main}.
 @item NoAddressInToField
 Do not allow @code{@@ ! %} chars in the FTN to field, thus preventing
 users from putting Internet addresses in the to field.
+
+@end table
+
+
+@noindent Special configuration @code{ftninpost} (config file @code{config.gate}):
+
+@table @code
+
+@item FTNInSendmail @i{command ...}
+Sendmail program to be run by @code{ftninpost} with options. @code{%s}
+is replaced with the envelope sender.
+
+@item FTNInRnews @i{command ...}
+Rnews program to be run by @code{ftninpost}.
+
+@item FTNInRecombine
+Automatically run @code{ftninrecomb} to recombine split messages.
 
 @end table
 
@@ -3474,7 +3487,7 @@ list.
 @cindex Configuration
 
 There seems to be some confusion about how to configure the gateway and
-the tosser, so a added this chapter. Hopefully this will help ...
+the tosser, so I added this chapter. Hopefully this will help ...
 
 @menu
 * Example Point::      Example point configuration
@@ -3491,8 +3504,14 @@ the tosser, so a added this chapter. Hopefully this will help ...
 @cindex Example
 @cindex Point
 
-
 @noindent
+@i{Please note that this point configuration uses the FIDOGATE
+tosser. Thus, it's different from the point configuration described in
+Roland Rosenfeld's Point HOWTO!!!}
+
+Actually, this point configuration is very similar to the node
+configuration described in the next section.
+
 Let's assume the following addresses:
 
 Fido point address 2:2499/123.9
@@ -3537,7 +3556,7 @@ Packer configuration @code{packing}: no packing for own address,
 @code{zip} is the default archiver for everything else.
 
 @example
-arc  zip    "/usr/bin/zip -gkjq %s %s"
+arc  zip    "/usr/bin/zip -9gkjq %s %s"
 
 pack noarc  2:2499/123.9
 pack zip    *
@@ -3545,9 +3564,9 @@ pack zip    *
 
 @noindent
 Next, the EchoMail areas must be listed in the @code{areas.bbs} file. Do
-@i{not} put your node address into @code{areas.bbs}! Example with two
-areas (the directory @code{X} is not used for EchoMail areas), which are
-non-passthrough:
+@i{not} put your point address into @code{areas.bbs}! Example with two
+areas (the directory @code{X} is not used for EchoMail areas), which
+must be non-passthrough:
 
 @example
 Your system name!sysop name
@@ -3620,7 +3639,7 @@ remap 2:2499/123.0 2:2499/123.11 "Sabine Meier"
 remap 2:2499/123.0 2:2499/123.1  "*"
 
 NetMail
-send  hold   2:2499/123.*
+send  hold   2:2499/1232:2499/123.*
 route normal 2:2499/100 1:* 2:* 3:* 4:* 5:* 6:*
 
 EchoMail
@@ -3634,7 +3653,7 @@ Packer configuration @code{packing}: no packing for the gateway address,
 @code{zip} is the default archiver for everything else.
 
 @example
-arc zip "/usr/bin/zip -gkjq %s %s"
+arc zip "/usr/bin/zip -9gkjq %s %s"
 
 pack noarc  2:2499/123.1
 pack zip    *
@@ -3651,6 +3670,10 @@ Your system name!sysop name
 #X LINUX.GER 2:2499/100 123.1 .10 .11
 #X UNIX.GER  2:2499/100 123.1 .11
 @end example
+
+@code{#} denotes a @i{passthrough} area, i.e. no packets for the own
+address (2:2499/123) are created. All EchoMail will be send to the
+gateway (.1).
 
 In the gateway configuration, these areas must be listed in the
 @code{areas} config file:
